--- a/src/App.css
+++ b/src/App.css
@@ -1,22 +1,26 @@
-.App {
-  text-align: center;
+ul{
+  font-size:20px;
 }
 
-.App-logo {
-  height: 40vmin;
+img{
+  height:500px;
+  width:600px;
+  margin-left: 400px;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.menu{
+  position:fixed;
+  width:20%;
+  background-color:lightpink;
+  border-radius:10px;
+  margin-top:50px;
 }
 
-.App-link {
-  color: #09d3ac;
+p{
+  padding-left:20px;
+}
+
+a{
+  text-decoration:none;
+  color:black;
 }
