--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,45 @@
+*{
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
+
+body{
+  font-family:cambria;
+  line-height: 1.4;
+}
+
+a{
+  color: #333;
+  text-decoration:none; 
+}
+
+.container{
+  padding: 0 1rem;
+}
+
+.btn{
+  display: inline-block;
+  border:none;
+  background: #555;
+  color: #fff;
+  padding:7px 20px;
+  cursor: pointer;
+
+}
+
+.btn:hover{
+  background: #666;
+}
+
+
+
+
+
+
+
+
+
 ul{
   font-size:20px;
 }
